add hardware call and --wait option
